# github-project-automation

./: .gitignore  README.md  pyproject.toml
data/: fields_example.json  fields_template_rabbird.json  issues.json
scripts/: bootstrap_fields_cache.py  fetch_project_metadata.py
src/gh_project_automation/: __init__.py  cli.py  config.py  github_rest.py  graphql_client.py  issue_creator.py  project_fields.py  project_item_manager.py  utils.py  validator.py
tests/: test_validator.py
